# iCE-Climber

./: .gitignore  README.md
Cliente/: CMakeLists.txt  globals.h  main.c
Cliente/Socket/: sockets.c
Cliente/Sockets/: JsonParser.c  sockets.c  sockets2.c  submit.c
Cliente/Test/: Test_sockets.c  test_Json.c  test_Listen.c  test_Observer.c  test_Player.c  test_Send.c
Pruebas Juan/: Client.java  Server.java  client  client.c  client2  client2.c  server  server.c
Server/src/: Main.java  Sockets.java
Server/src/Game/: ConsoleLogic.java  EventListener.java  Game.java  GameAdmin.java  Player.java  SocketAdmin.java  SocketListener.java
Server/src/Net/: JsonParser.java  SocketAdmin.java  SocketListener.java  Sockets.java
